tests/ui/type-alias-impl-trait/nested-tait-inference2.current.stderr
error[E0283]: type annotations needed: cannot satisfy `(): Foo<FooX>`
  --> $DIR/nested-tait-inference2.rs:17:13
   |
LL | fn foo() -> impl Foo<FooX> {
   |             ^^^^^^^^^^^^^^
LL |
LL |     ()
   |     -- return type was inferred to be `()` here
   |
note: multiple `impl`s satisfying `(): Foo<FooX>` found
  --> $DIR/nested-tait-inference2.rs:14:1
   |
LL | impl Foo<()> for () {}
   | ^^^^^^^^^^^^^^^^^^^
LL | impl Foo<u32> for () {}
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
